--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
 	"license": "ISC",
 	"dependencies": {
 		"clsx": "^1.2.1",
+		"framer-motion": "^7.6.12",
 		"gsap": "^3.11.3",
 		"next": "^13.0.4",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-particles": "^2.5.3",
-		"tsparticles": "^2.5.3"
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"eslint": "8.28.0",
