--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"eslint": "8.28.0",
 		"eslint-config-next": "^13.0.4",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"lint-staged": "^13.0.3",
 		"postcss": "^8.4.19",
 		"postcss-custom-media": "^9.0.1",
