--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"next": "^13.0.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"sharp": "^0.31.3"
+		"sharp": "^0.31.3",
+		"swiper": "^9.3.2"
 	},
 	"devDependencies": {
 		"eslint": "8.28.0",
