--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
 		"@svgr/webpack": "^6.5.1",
 		"clsx": "^1.2.1",
 		"framer-motion": "^10.12.8",
-		"next": "^13.0.4",
+		"i18next": "^22.5.0",
+		"next": "^13.4.3",
+		"next-i18next": "^13.2.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^12.3.1",
 		"sharp": "^0.31.3",
 		"swiper": "^9.3.2"
 	},
 	"devDependencies": {
+		"@types/node": "^20.2.3",
+		"@types/react": "^18.2.6",
 		"eslint": "8.28.0",
 		"eslint-config-next": "^13.0.4",
 		"eslint-config-prettier": "^8.5.0",
@@ -42,6 +47,7 @@
 		"stylelint": "^14.15.0",
 		"stylelint-checkstyle-formatter": "^0.1.2",
 		"stylelint-config-standard": "^29.0.0",
-		"stylelint-scss": "^4.3.0"
+		"stylelint-scss": "^4.3.0",
+		"typescript": "^5.0.4"
 	}
 }
