--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
 		"@svgr/webpack": "^6.5.1",
 		"clsx": "^1.2.1",
 		"framer-motion": "^10.12.8",
-		"i18next": "^22.5.0",
 		"next": "^13.4.3",
-		"next-i18next": "^13.2.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-i18next": "^12.3.1",
+		"react-intl": "^6.4.2",
 		"sharp": "^0.31.3",
 		"swiper": "^9.3.2"
 	},
