change service worker to static cache, add public photos

--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
 		"swiper": "^9.3.2"
 	},
 	"devDependencies": {
+		"@cypress-audit/lighthouse": "^1.4.2",
+		"@cypress-audit/pa11y": "^1.4.2",
 		"@svgr/webpack": "^8.0.1",
 		"@types/node": "^20.2.3",
 		"@types/react": "^18.2.6",
+		"cypress": "^12.17.4",
 		"eslint": "8.28.0",
 		"eslint-config-next": "^13.0.4",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"lint-staged": "^13.0.3",
+		"npx": "^10.2.2",
 		"postcss": "^8.4.19",
 		"postcss-custom-media": "^9.0.1",
 		"postcss-flexbugs-fixes": "^5.0.2",
@@ -42,6 +46,7 @@
 		"postcss-normalize": "^10.0.1",
 		"postcss-preset-env": "^7.8.3",
 		"prettier": "^2.7.1",
+		"run": "^1.4.0",
 		"sass": "^1.62.1",
 		"stylelint": "^14.15.0",
 		"stylelint-checkstyle-formatter": "^0.1.2",
